made the content in <main> center and fixed clipped content from header

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -26,3 +26,11 @@ body {
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+
+.container {
+    width: 450px;
+    background-color: white;
+    margin-top: 140px;
+    margin-left: auto;
+    margin-right: auto;
+}
